# Hourglass

./: .gitignore  README.md  install.sh  package-lock.json  package.json  uninstall.sh
documentation/: PopupWindow_Layout.docx  PopupWindow_Layout.xlsx
src/: content.js  defualtConfig.xml  index.html  main.js  settings.html  settings.js  sprites.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/buttons/: CloseButton.java  MenuButton.java  TerminateButton.java
src/constants/: .gitignore  ConfigurationHeaders.java  Constants.java  CurrentConfiguration.java  DefaultConfiguration.java  DefaultHourglassConfiguration.java
src/executionThreads/: .gitignore  Lock.java  MainThread.java  MyTimerTask.java  PopupThread.java  PopupWindow.java  Timer.java  TimerThread.java
src/guiElements/: .gitignore  ButtonLayout.java  CenteredJLabel.java  CloseButton.java  MenuButton.java  TerminateButton.java
