[package]
name = "hourglass"
version = "0.4.0"
description = "A retro desktop break-reminder timer"
authors = ["Guru227"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "macros"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
